k8s/ingress/azure/csharp-ingress-azure.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dotnet-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: dotnet.service.XXXXXXXXXXXXXXXXXXXX.westeurope.aksapp.io
    http:
      paths:
      - path: /
        backend:
          serviceName: dotnet-service
          servicePort: 80
