k8s/ingress/azure/golang-ingress-azure.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: golang-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: golang.service.XXXXXXXXXXXXXXXXXXXX.westeurope.aksapp.io
    http:
      paths:
      - path: /
        backend:
          serviceName: golang-service
          servicePort: 1234
